--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -89,7 +89,7 @@
  
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" href="../../index.html">Produtos<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="../../index.php">Produtos<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="sobre.html">Sobre</a>
