--- a/site/pages/sobre.html
+++ b/site/pages/sobre.html
@@ -103,7 +103,7 @@
  
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" href="../../index.html">Produtos<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="../../index.php">Produtos<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">Sobre</a>
