Login primitivo funcionando
é preciso inserir a tabela vendedor no db

--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -109,12 +109,14 @@
 					<div class="card-title"> <br>
 						<h4 class="card-title-text">Login</h4>
 					</div>
+
+         <form method="POST" action="autenticacao.php"> 
 					<label for="uname"><b>Usuário</b></label>
     <input type="text" placeholder="Escreve seu usuario" name="uname" required>
     <label for="psw"><b>Senha</b></label>
     <input type="password" placeholder="Escreva a senha" name="psw" required>
     <button type="submit" class="large-button">Login</button>
-   
+   </form>
 
 <div class="container" style="background-color:#f1f1f1">
     <span class="psw">Esqueceu a<a href="#"> senha?</a></span> <br>
