login conectado com cadastro

--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -120,7 +120,7 @@
 
 <div class="container" style="background-color:#f1f1f1">
     <span class="psw">Esqueceu a<a href="#"> senha?</a></span> <br>
-    <span class="register">Ainda não tem conta? <a href="#">Registre-se</a></span>
+    <span class="register">Ainda não tem conta? <a href="cadastro.html">Registre-se</a></span>
   </div>
  <button type="button" style="width: 100.5%" class="cancelbtn">Cancelar</button>
 
