--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -76,6 +76,11 @@
   height: 100px;
 }
 
+.form{
+border: none;
+}
+
+
 </style>
 <nav class="navbar navbar-expand-lg navbar-dark">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -110,7 +115,7 @@
 						<h4 class="card-title-text">Login</h4>
 					</div>
 
-         <form method="POST" action="autenticacao.php"> 
+         <form class= form method="POST" action="autenticacao.php"> 
 					<label for="uname"><b>Usuário</b></label>
     <input type="text" placeholder="Escreve seu usuario" name="uname" required>
     <label for="psw"><b>Senha</b></label>
