--- a/site/pages/cadastro.html
+++ b/site/pages/cadastro.html
@@ -79,17 +79,19 @@ min-width: 300px
  // border-top-left-radius: 15px;
   border-style: none;
   font-family: 'Do Hyeon', sans-serif;
-  background-color:  #41c300; 
+  background-color:  #4CAF50; 
   transition: 1s;
   margin-left: -2px;
 }
 .submitbtn:hover{
-background-color: #008b00; 
+//background-color: #008b00; 
+ opacity: 0.8;
 transition: 1s;
 }
 
 .cancelbtn:hover{
-background-color: #B71C1C;
+//background-color: #B71C1C;
+ opacity: 0.8;
 transition: 1s;
 }
 
@@ -101,7 +103,7 @@ transition: 1s;
      border-style: none;
      margin-left:-2px;
      font-family: 'Do Hyeon', sans-serif;
-  background-color:  #D32F2F;
+  background-color:  #f44336;
   margin-bottom: -2px;
  
  }
