--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -88,19 +88,18 @@ border: none;
   <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     
-  </button><a class="navbar-brand mr-auto" href="#"><img src="../resources/logo.png" width="110px"></a>
-  
+  </button><a class="navbar-brand mr-auto" href="/eachphp/index.php"><img src="/eachphp/site/resources/logo.png" width="110px"></a>
   <div class="collapse navbar-collapse justify-content-between" id="navbarTogglerDemo01">
  
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" href="../../index.php">Produtos<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/eachphp/index.php">Produtos<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="sobre.html">Sobre</a>
+        <a class="nav-link" href="/eachphp/site/pages/sobre.html">Sobre</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Entrar</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/eachphp/site/pages/login.html">Entrar</a>
       </li>
     </ul>
   </div>
