--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -96,7 +96,7 @@ border: none;
         <a class="nav-link" href="/eachphp/index.php">Produtos<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/eachphp/site/pages/sobre.html">Sobre</a>
+        <a class="nav-link" href="/eachphp/site/pages/sobre.php">Sobre</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/eachphp/site/pages/login.html">Entrar</a>
