--- a/site/pages/cadastro.html
+++ b/site/pages/cadastro.html
@@ -149,7 +149,7 @@ transition: 1s;
         <a class="nav-link" href="/eachphp/index.php">Produtos<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/eachphp/site/pages/sobre.html">Sobre</a>
+        <a class="nav-link" href="/eachphp/site/pages/sobre.php">Sobre</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/eachphp/site/pages/login.html">Entrar</a>
