--- a/site/pages/login.html
+++ b/site/pages/login.html
@@ -1,11 +1,12 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>COMIDINHAS - EACH USP</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/eachphp/site/pages/css/login.css">
+  <link rel="stylesheet" type="text/css" href="css/login.css">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
@@ -14,7 +15,7 @@
 <div id="nav-placeholder"> </div>
   <script>
   $(function(){
-    $("#nav-placeholder").load("/eachphp/site/resources/nav.php");
+    $("#nav-placeholder").load("../resources/nav.php");
   });
   </script>
 <br>
