-Usuário pode escolher a cor no cadastro agora
-Adicionem a coluna: alter table vendedor add column cor varchar(7) not null default '#fdb523';

--- a/site/pages/cadastro.html
+++ b/site/pages/cadastro.html
@@ -41,7 +41,8 @@
     <input type="password"class="campo" placeholder="Senha" name="psw" required><br>
       <label for="psw-repeat" class="title"><b>Repita a senha</b></label><br>
     <input type="password" class="campo" placeholder="Repita a senha" name="psw-repeat" required><br>
- 
+    <label for="color" class="title"><b>Escolha o tema<br>OBS: Se escolher "branco", o amarelo padrão é aplicado</b></label><br>
+    <input type="color" value="#fdb523" name="color">
 <br><br>
     <div class="buttons text-center">
       <button type="submit" class="submitbtn">Enviar</button> <br>
